trying to figure out CSS

--- a/index.html
+++ b/index.html
@@ -89,11 +89,9 @@
                 <h1>Academic History</h1>
                     <section>
                         <h2>Harvard University</h2>
-                        <p>Law Degree</p>
-                        <br>1988-1991</p>
-                    </section>
-                    <section>   
-                        <p>Juris Doctor magna cum laude</p>
+                        <p>Law Degree
+                        <br>1988-1991
+                        <br>Juris Doctor magna cum laude</p>
                         <ul>
                             <li>First black president of Harvard Law Review</li>
                             <li>Studied constitutional law</li>
@@ -103,10 +101,8 @@
                     <section>
                         <h2>Columbia University</h2>
                         <p>Bachelor of Arts
-                        <br>1981-1983</p>
-                    </section>
-                    <section>
-                        <p>BA Political Science</p>
+                        <br>1981-1983
+                        <br>BA Political Science</p>
                         <ul>
                             <li>Studied political and international affairs</li>
                             <li>International relations specialty</li>
